.old/layout/pre-view/.logs/exceptions.log
[31muncaughtException: missing ) after argument list[39m
[31m/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/bin/commands/jsBundle.js:15[39m
[31m    __('No files with name "' __config.dist.js.bundle.sourceFilesPattern.split('/').slice(-1) '" has been found...', 'warning');[39m
[31m       ^^^^^^^^^^^^^^^^^^^^^^[39m

[31mSyntaxError: missing ) after argument list[39m
[31m    at Module._compile (internal/modules/cjs/loader.js:895:18)[39m
[31m    at Object.Module._extensions..js (internal/modules/cjs/loader.js:995:10)[39m
[31m    at Module.load (internal/modules/cjs/loader.js:815:32)[39m
[31m    at Function.Module._load (internal/modules/cjs/loader.js:727:14)[39m
[31m    at Module.require (internal/modules/cjs/loader.js:852:19)[39m
[31m    at require (internal/modules/cjs/helpers.js:74:18)[39m
[31m    at Command.<anonymous> (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/bin/coffeekraken-monorepo.js:44:28)[39m
[31m    at Command.listener (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/node_modules/commander/index.js:360:8)[39m
[31m    at Command.emit (events.js:210:5)[39m
[31m    at Command.parseArgs (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/node_modules/commander/index.js:799:12)[39m
[31muncaughtException: missing ) after argument list[39m
[31m/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/bin/commands/jsBundle.js:15[39m
[31m    __log('No files with name "' __config.dist.js.bundle.sourceFilesPattern.split('/').slice(-1) '" has been found...', 'warning');[39m
[31m          ^^^^^^^^^^^^^^^^^^^^^^[39m

[31mSyntaxError: missing ) after argument list[39m
[31m    at Module._compile (internal/modules/cjs/loader.js:895:18)[39m
[31m    at Object.Module._extensions..js (internal/modules/cjs/loader.js:995:10)[39m
[31m    at Module.load (internal/modules/cjs/loader.js:815:32)[39m
[31m    at Function.Module._load (internal/modules/cjs/loader.js:727:14)[39m
[31m    at Module.require (internal/modules/cjs/loader.js:852:19)[39m
[31m    at require (internal/modules/cjs/helpers.js:74:18)[39m
[31m    at Command.<anonymous> (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/bin/coffeekraken-monorepo.js:44:28)[39m
[31m    at Command.listener (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/node_modules/commander/index.js:360:8)[39m
[31m    at Command.emit (events.js:210:5)[39m
[31m    at Command.parseArgs (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/node_modules/commander/index.js:799:12)[39m
[31muncaughtException: logger[level] is not a function[39m
[31mTypeError: logger[level] is not a function[39m
[31m    at log (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/node_modules/@coffeekraken/sugar/node/log/log.js:41:16)[39m
[31m    at module.exports (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/bin/commands/jsBundle.js:15:5)[39m
[31m    at Command.<anonymous> (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/bin/coffeekraken-monorepo.js:44:61)[39m
[31m    at Command.listener (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/node_modules/commander/index.js:360:8)[39m
[31m    at Command.emit (events.js:210:5)[39m
[31m    at Command.parseArgs (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/node_modules/commander/index.js:799:12)[39m
[31m    at Command.parse (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/node_modules/commander/index.js:563:21)[39m
[31m    at Object.<anonymous> (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/bin/coffeekraken-monorepo.js:81:11)[39m
[31m    at Module._compile (internal/modules/cjs/loader.js:959:30)[39m
[31m    at Object.Module._extensions..js (internal/modules/cjs/loader.js:995:10)[39m
[31muncaughtException: Unexpected identifier[39m
[31m/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/bin/commands/scss.js:1[39m
[31msass src/scss:dist/css --load-path=node_modules --load-path=node_modules/@coffeekraken[39m
[31m     ^^^[39m

[31mSyntaxError: Unexpected identifier[39m
[31m    at Module._compile (internal/modules/cjs/loader.js:895:18)[39m
[31m    at Object.Module._extensions..js (internal/modules/cjs/loader.js:995:10)[39m
[31m    at Module.load (internal/modules/cjs/loader.js:815:32)[39m
[31m    at Function.Module._load (internal/modules/cjs/loader.js:727:14)[39m
[31m    at Module.require (internal/modules/cjs/loader.js:852:19)[39m
[31m    at require (internal/modules/cjs/helpers.js:74:18)[39m
[31m    at Command.<anonymous> (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/bin/coffeekraken-monorepo.js:50:9)[39m
[31m    at Command.listener (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/node_modules/commander/index.js:360:8)[39m
[31m    at Command.emit (events.js:210:5)[39m
[31m    at Command.parseArgs (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/node_modules/commander/index.js:799:12)[39m
[31muncaughtException: Unexpected identifier[39m
[31m/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/bin/commands/scss.js:1[39m
[31msass src/scss:dist/css --load-path=node_modules --load-path=node_modules/@coffeekraken[39m
[31m     ^^^[39m

[31mSyntaxError: Unexpected identifier[39m
[31m    at Module._compile (internal/modules/cjs/loader.js:895:18)[39m
[31m    at Object.Module._extensions..js (internal/modules/cjs/loader.js:995:10)[39m
[31m    at Module.load (internal/modules/cjs/loader.js:815:32)[39m
[31m    at Function.Module._load (internal/modules/cjs/loader.js:727:14)[39m
[31m    at Module.require (internal/modules/cjs/loader.js:852:19)[39m
[31m    at require (internal/modules/cjs/helpers.js:74:18)[39m
[31m    at Command.<anonymous> (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/bin/coffeekraken-monorepo.js:50:9)[39m
[31m    at Command.listener (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/node_modules/commander/index.js:360:8)[39m
[31m    at Command.emit (events.js:210:5)[39m
[31m    at Command.parseArgs (/Users/olivierbossel/data/web/coffeekraken/coffeekraken/terminal/monorepo/node_modules/commander/index.js:799:12)[39m
